--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,8 +46,10 @@ steps:
     cwd=`pwd`
     echo $cwd
     list=`ls $cwd`
-
-    cp -R ../$cwd/SCXcore opsmgr
+    echo $list
+    
+    git clone --recursive 'https://github.com/Microsoft/SCXcore.git' ../SCXcore
+    cp -R ../SCXcore opsmgr
 
         cd opsmgr/build
     ./configure
